--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -16,6 +16,7 @@
   outline: 0;
   background: transparent;
   border-bottom: 1px solid #6f6f6f;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.55rem;
   color: #fff;
 }
@@ -23,7 +24,7 @@
 .Playlist-save {
   cursor: pointer;
   width: 10rem;
-  padding: .77em 0;
+  padding: .77rem 0;
   border-radius: 54px;
   border-width: 0px;
   margin-top: 1.27rem;
@@ -31,20 +32,21 @@
   text-align: center;
   font-size: .83rem;
   transition: background-color .25s;
+  color: #fff;
   font-weight: 500;
 }
 
 .Playlist-save:hover {
-  background-color: rgba(108, 65, 233, .7)
+  background-color: rgba(108, 65, 233, .7);
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
+    width: 0px;
+    background: transparent;
 }
 
-@media only screen and (max-width:1020px) {
+@media only screen and (max-width: 1020px) {
   .Playlist {
-    width: 90%
+    width: 90%;
   }
 }
