--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -18,13 +18,13 @@
 }
 
 .SearchBar input:focus {
-  outline: none; 
+  outline: none;
 }
 
 .SearchButton {
   cursor: pointer;
-  width: 8.22rem;
-  padding: .7rem 0;
+  width: 8.11rem;
+  padding: .77rem 0;
   border-radius: 54px;
   background-color: #010c3f;
   text-align: center;
@@ -35,6 +35,6 @@
   font-weight: 500;
 }
 
-.SearchBar:hover {
-  background-color: rgba(108, 65, 233, .7)
+.SearchButton:hover {
+  background-color: rgba(108, 65, 233, .7);
 }
